# run-clang-format

./: .gitignore  Cargo.toml  LICENSE  changelog.md  readme.md
.cargo/: config.toml
.github/setup/: load_artifacts_macos.sh  load_artifacts_ubuntu.sh  load_artifacts_windows.bat
.github/workflows/: ci.yml  release.yml
src/: cli.rs  globs.rs  lib.rs  main.rs  resolve.rs
src/cli/: handlers.rs  logging.rs  mod.rs  utils.rs
src/cmd/: mod.rs
src/lib/: globs.rs  mod.rs  resolve.rs
test-files/: format.json  other.clang-format
test-files/c-demo-err-root/module_d/: module_d.c  module_d.h
test-files/c-demo/.hidden/: hidden.c  hidden.h
test-files/c-demo/pkg_a/module_a/: module_a.c  module_a.h
test-files/c-demo/pkg_b/module_b/: module_b.c  module_b.h
test-files/c-demo/pkg_b/module_c/: module_c.c  module_c.h
test-files/c-demo/project/src/: main.c
test-files/c-demo/subfolder/pkg_c/module_nofmt/: module_nofmt.c  module_nofmt.h
test-files/c-demo/subfolder/pkg_c/module_sub_a/: module_sub_a.c  module_sub_a.h
test-files/c-demo/subfolder/pkg_c/module_sub_b/: module_sub_b.c  module_sub_b.h
test-files/c-demo/subfolder/pkg_c/module_unused/: module_unused.h
test-files/clang-format/: buggy.clang-format  named.clang-format
test-files/json/: format.json  test-err-format.json  test-err-invalid-command-file.json  test-err-invalid-command-name.json  test-err-invalid-command.json  test-err-invalid-glob.json  test-err-invalid-root.json  test-err-invalid-style-file.json  test-err-invalid-style-path.json  test-err-no-root.json  test-err-strict-root.json  test-ok-format.json  test-ok-strict-root.json  test-ok-style-and-command-name.json  test-ok-style-and-command.json  test-ok-style-named.json  test-ok-style.json
tests/: invoke.rs  readme.md
