[package]
name = "run_clang_format"
version = "1.3.0"
authors = ["Martin Lampacher <lmapii@gmail.com>"]
description = """
Cross platform CLI wrapper for executing clang-format based paths or globs specified
in a JSON input file.
"""
# documentation = "https://docs.rs/run_clang_format"
homepage = "https://github.com/lmapii/run_clang_format"
repository = "https://github.com/lmapii/run_clang_format"
keywords = ["clang-format", "glob", "search"]

license-file = "LICENSE"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive", "cargo"] }
schemars = "0.8.8"
serde = "1.0.136"
serde_json = "1.0.79"
log = "0.4.14"
env_logger = "0.9.0"
eyre = "0.6.7"
color-eyre = { version = "0.6", default-features = false, features = ["capture-spantrace"] }
regex = "1.5.5"
scopeguard = "1.1.0"
# globmatch = { path = "../globmatch" }
globmatch = "0.1"
rayon = "1.5"
# indicatif = { git = "https://github.com/console-rs/indicatif", branch = "main"}
indicatif = "0.16"
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }

[dev-dependencies]
doc-comment = "0.3"
assert_cmd = "2.0.4"