[package]
name = "run-clang-format"
version = "1.4.2"
authors = ["Martin Lampacher <lmapii@gmail.com>"]
description = """
Cross platform CLI wrapper for executing clang-format based paths or globs specified
in a JSON input file.
"""
# documentation = "https://docs.rs/run-clang-format"
homepage = "https://github.com/lmapii/run-clang-format"
repository = "https://github.com/lmapii/run-clang-format"
keywords = ["clang-format", "glob", "search"]

license-file = "LICENSE"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive", "cargo"] }
schemars = "0.8.8"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
eyre = "0.6"
color-eyre = { version = "0.6", default-features = false, features = ["capture-spantrace"] }
regex = "1.5.5"
scopeguard = "1.1.0"
# globmatch = { path = "../globmatch" }
globmatch = "0.2"
rayon = "1.5"
# indicatif = { git = "https://github.com/console-rs/indicatif", branch = "main"}
indicatif = "0.17"
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }

[dev-dependencies]
doc-comment = "0.3"
assert_cmd = "2.0.4"

# [profile.release]
# strip="debuginfo"
# error: failed to run custom build command for `libc v0.2.123`
# Caused by:
#   process didn't exit successfully: `/path/to/run-clang-format/target/release/build/libc-f010f5927a4f70bf/build-script-build` (signal: 9, SIGKILL: kill)